<resources>
    <string name="app_name">Mentorship</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="find_your_best_jobs">Find your best jobs</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="apply">Apply</string>
    <string name="most_popular">Most popular</string>
    <string name="company_image">Company Image</string>
    <string name="nearby_jobs">Nearby jobs</string>

    <style name="apply">Apply</style>

    <string name="experience">Experience</string>
    <string name="employee_type">Employee type</string>
    <string name="job_description">Job Description</string>
    <string name="categories">Categories</string>
    <string name="search_results">Search Results</string>
    <string name="hello">Hello</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an account</string>
    <string name="almost_done">Almost Done</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="profile_image">Profile Image</string>
    <string name="icon">Icon</string>
    <string name="field_is_required">This field is required!</string>
    <string name="login_password_incorrect">Login or password is incorrect!</string>
    <string name="passwords_not_match">Passwords do not match!</string>
    <string name="email_in_use">"Email is already in use!"</string>
    <string name="forum">Forum</string>
    <string name="messages">Messages</string>
    <string name="connection_error">Something happened with connection! Swipe for refresh</string>
    <string name="ui_design">UI Design</string>
    <string name="product_management">Product Management</string>
    <string name="android_development">Android Development</string>
    <string name="ios_development">iOS Development</string>
    <string name="web_development">Web Development</string>
    <string name="data_science">Data Science</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort by</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="remote">Remote</string>
    <string name="skills">Skills</string>
    <string name="education">Education</string>
    <string name="achievements">Achievements</string>
    <string name="licenses">Licenses</string>
    <string name="languages">Languages</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="arrow_icon">Arrow icon</string>


    <string-array name="sort_by_items">
        <item>Date</item>
        <item>Salary ($$$ > $)</item>
        <item>Salary ($ > $$$)</item>
    </string-array>

    <string-array name="category_items">
        <item>UI/UX Design</item>
        <item>Web Development</item>
        <item>Data Science</item>
    </string-array>
</resources>