<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/forum_item"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/forum"/>

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>

    <item
        android:id="@+id/message_item"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/messages"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"/>
</menu>