<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/backgroundColor">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/hello"
        android:textSize="@dimen/font_huge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/welcome_back"
        android:textSize="@dimen/font_huge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hello" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:hint="@string/login"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:hintEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_small"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_small"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome_back">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:inputType="textWebEmailAddress"
            android:textSize="@dimen/font_semi_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_small"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_small"
        app:endIconMode="password_toggle"
        app:hintEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:nextFocusForward="@id/button_login"
            android:inputType="textPassword"
            android:textSize="@dimen/font_semi_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_forgot_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
        app:rippleColor="@android:color/transparent" />

    <Button
        android:id="@+id/button_login"
        style="@style/Custom.Button.Corners.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:minHeight="60dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/font_semi_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_password"
        app:rippleColor="@color/mediumGrey"/>

    <TextView
        android:id="@+id/text_need_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/need_an_account"
        android:textSize="@dimen/font_semi_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/button_register"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingVertical="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="8dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="@dimen/font_semi_large"
        app:layout_constraintStart_toEndOf="@+id/text_need_account"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:rippleColor="@android:color/transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>