<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <TextView
            android:id="@+id/text_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/create_an_account"
            android:textSize="@dimen/font_huge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_small"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_small"
            app:layout_constraintTop_toBottomOf="@+id/text_create_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="textWebEmailAddress"
                android:textSize="@dimen/font_semi_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:hint="@string/username"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_small"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_small"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="textWebEmailAddress"
                android:textSize="@dimen/font_semi_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_small"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_small"
            app:endIconMode="password_toggle"
            app:hintEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="textPassword"
                android:textSize="@dimen/font_semi_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_confirm_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_small"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_small"
            app:endIconMode="password_toggle"
            app:hintEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_confirm_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:nextFocusForward="@id/button_next"
                android:inputType="textPassword"
                android:textSize="@dimen/font_semi_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_next"
            style="@style/Custom.Button.Corners.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato_regular"
            android:minHeight="60dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="@dimen/font_semi_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_confirm_input_layout"
            app:rippleColor="@color/mediumGrey"
            android:onClick="onClickNext"/>

        <TextView
            android:id="@+id/text_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/font_semi_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_next" />

        <Button
            android:id="@+id/button_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="onClickLogin"
            android:paddingVertical="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/font_semi_large"
            app:layout_constraintStart_toEndOf="@+id/text_have_account"
            app:layout_constraintTop_toBottomOf="@+id/button_next"
            app:rippleColor="@android:color/transparent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>